kubernetes/kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medflow-kong
  annotations:
    konghq.com/plugins: medflow-rate-limit
spec:
  ingressClassName: kong
  rules:
    - host: api.medflow.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
